--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/bases.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/presentacion.css">
 </head>
 <body>
     <header class="header container">
@@ -20,12 +21,24 @@
                 <li class="header__enlace"><a href="">Hobbies</a></li>
                 <li class="header__enlace"><a href="">Formación</a></li>
                 <li class="header__enlace"><a href="">Proyectos</a></li>
-                <li class="header__enlace"><a href="mailto:verduzcogonzalezangelmanuel3@gmail.com">verduzcogonzalezangelmanuel3@gmail.com</a></li>
+                <li class="header__enlace header__enlace--correo"><a href="mailto:verduzcogonzalezangelmanuel3@gmail.com">verduzcogonzalezangelmanuel3@gmail.com</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <section class="presentacion container">
+            <div class="presentacion__informacion">
+                <h2 class="presentacion__titulo">Hola, mi nombre es Angel Verduzco y construyo páginas web</h2>
+                <p class="presentacion__descripcion">Estoy siendo formado en la Universidad de Colima, mas específicamente en la Facultad de Telemática donde estoy cursando la carrera de Ingeniería en Software, actualmente estoy siendo parte del proyecto Oracle ONE en Alura Latam donde estoy tomando la especialización de FrontEnd Developer.</p>
+                <ul class="presentacion__lista">
+                    <li class="presentacion__item"><a class="presentacion__enlace" href="">GitHub</a></li>
+                    <li class="presentacion__item"><a class="presentacion__enlace" href="">Linkedin</a></li>
+                    <li class="presentacion__item"><a class="presentacion__enlace" href="">Instagram</a></li>
+                    <li class="presentacion__item"><a class="presentacion__enlace" href="">Facebook</a></li>
+                </ul>
+            </div>
+            <img class="presentacion__imagen" src="img/selfie.jpeg" alt="Foto de Angel"></img>
+        </section>
     </main>
     <footer>
 
