Creación de sección sobre mí y cambios estéticos a otras secciones

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/bases.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/presentacion.css">
+    <link rel="stylesheet" href="css/sobreMi.css">
 </head>
 <body>
     <header class="header container">
@@ -29,15 +30,24 @@
         <section class="presentacion container">
             <div class="presentacion__informacion">
                 <h2 class="presentacion__titulo">Hola, mi nombre es Angel Verduzco y construyo páginas web</h2>
-                <p class="presentacion__descripcion">Estoy siendo formado en la Universidad de Colima, mas específicamente en la Facultad de Telemática donde estoy cursando la carrera de Ingeniería en Software, actualmente estoy siendo parte del proyecto Oracle ONE en Alura Latam donde estoy tomando la especialización de FrontEnd Developer.</p>
+                <p class="presentacion__descripcion">Estoy siendo formado en la Universidad de Colima y actualmente estoy siendo parte del proyecto Oracle ONE en Alura Latam donde estoy tomando la especialización de FrontEnd Developer.</p>
                 <ul class="presentacion__lista">
-                    <li class="presentacion__item"><a class="presentacion__enlace" href="">GitHub</a></li>
+                    <li class="presentacion__item"><a class="presentacion__enlace" href="https://github.com/AngelManuelVerduzcoGonzalez">GitHub</a></li>
                     <li class="presentacion__item"><a class="presentacion__enlace" href="">Linkedin</a></li>
                     <li class="presentacion__item"><a class="presentacion__enlace" href="">Instagram</a></li>
                     <li class="presentacion__item"><a class="presentacion__enlace" href="">Facebook</a></li>
                 </ul>
             </div>
             <img class="presentacion__imagen" src="img/selfie.jpeg" alt="Foto de Angel"></img>
+        </section>
+        <section class="sobreMi container">
+            <h2 class="sobreMi__titulo">Sobre mí</h2>
+            <p class="sobreMi__descripcion">Me llamo Angel Manuel Verduzco González, nací en Colima, México. Actualmente tengo 18 años de edad y estoy estudiando la carrera de ingeniería en software en la Facultad de Telemática de la Universidad de Colima.
+            <br>
+            <br>
+            Empecé a intresarme por el área de la programación cuando estaba estudiando la preparatoria, empecé a aprender a programar hace apenas 1 año y tengo poca experiencia realizando proyectos en esta área, por eso es que decidí entrar al curso de Oracle ONE en Alura Latam.
+            </p>
+            <img src="img/firma.png" alt="Firma" class="sobreMi__firma">
         </section>
     </main>
     <footer>
