Creación de sección de skills

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/presentacion.css">
     <link rel="stylesheet" href="css/sobreMi.css">
+    <link rel="stylesheet" href="css/skills.css">
 </head>
 <body>
     <header class="header container">
@@ -48,6 +49,23 @@
             Empecé a intresarme por el área de la programación cuando estaba estudiando la preparatoria, empecé a aprender a programar hace apenas 1 año y tengo poca experiencia realizando proyectos en esta área, por eso es que decidí entrar al curso de Oracle ONE en Alura Latam.
             </p>
             <img src="img/firma.png" alt="Firma" class="sobreMi__firma">
+        </section>
+        <section class="skills container">
+            <h2 class="skills__titulo">Skills</h2>
+            <ul class="skills__lista">
+                <li class="skills__item">
+                    <img src="img/htlm.png" alt="Icono de HTML" class="skills__imagen">
+                    <p class="skills__nombre">HTML5</p>
+                </li>
+                <li class="skills__item">
+                    <img src="img/css_icon.png" alt="Icono de CSS" class="skills__imagen">
+                    <p class="skills__nombre">CSS</p>
+                </li>
+                <li class="skills__item">
+                    <img src="img/js_icon.png" alt="Icono de JavaScript" class="skills__imagen">
+                    <p class="skills__nombre">JavaScript</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
