Creación de sección Hobbies y Formación académica

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/presentacion.css">
     <link rel="stylesheet" href="css/sobreMi.css">
     <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/hobbies.css">
+    <link rel="stylesheet" href="css/formacion.css">
 </head>
 <body>
     <header class="header container">
@@ -61,11 +63,51 @@
                     <img src="img/css_icon.png" alt="Icono de CSS" class="skills__imagen">
                     <p class="skills__nombre">CSS</p>
                 </li>
-                <li class="skills__item">
+                <li class="skills__item skills__item--last">
                     <img src="img/js_icon.png" alt="Icono de JavaScript" class="skills__imagen">
                     <p class="skills__nombre">JavaScript</p>
                 </li>
             </ul>
+        </section>
+        <section class="hobbies container">
+            <h2 class="hobbies__titulo">Hobbies</h2>
+            <ul class="hobbies__lista">
+                <li class="hobbies__item">
+                    <img src="img/gamepad-solid.svg" alt="Icono de mando de videojuegos" class="hobbies__imagen">
+                    <p class="hobbies__descripcion">Videojuegos</p>
+                </li>
+                <li class="hobbies__item">
+                    <img src="img/volleyball-solid.svg" alt="Icono de pelota de volibol" class="hobbies__imagen">
+                    <p class="hobbies__descripcion">Volibol</p>
+                </li>
+                <li class="hobbies__item">
+                    <img src="img/headphones-solid.svg" alt="Icono de audifonos" class="hobbies__imagen">
+                    <p class="hobbies__descripcion">Oír música</p>
+                </li>
+                <li class="hobbies__item hobbies__item--last">
+                    <img src="img/tv-solid.svg" alt="Icono de TV" class="hobbies__imagen">
+                    <p class="hobbies__descripcion">Ver anime</p>
+                </li>
+            </ul>
+        </section>
+        <section class="formacion container">
+            <h2 class="formacion__titulo">Formación académica</h2>
+            <div class="formacion__caja">
+                <div class="formacion__seccion">
+                    <ul class="formacion__lista">
+                        <li class="formacion__item--logo"><img src="img/udec_logo.png" alt="Logo de la Universidad de Colima" class="formacion__imagen"></li>
+                        <li class="formacion__item"><h4 class="formacion__nombre">Ingeniería en Software</h4></li>
+                        <li class="formacion__item"><p class="formacion__info">En curso - Universidad de Colima</p></li>
+                    </ul>
+                </div>
+                <div class="formacion__seccion">
+                    <ul class="formacion__lista">
+                        <li class="formacion__item--logo"><img src="img/alura_logo.png" alt="Logo de Alura" class="formacion__imagen"></li>
+                        <li class="formacion__item"><h4 class="formacion__nombre">FrontEnd Developer</h4></li>
+                        <li class="formacion__item"><p class="formacion__info">En curso - Alura Latam</p></li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
