--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/hobbies.css">
     <link rel="stylesheet" href="css/formacion.css">
+    <link rel="stylesheet" href="css/experiencia.css">
 </head>
 <body>
     <header class="header container">
@@ -103,10 +104,34 @@
                 <div class="formacion__seccion">
                     <ul class="formacion__lista">
                         <li class="formacion__item--logo"><img src="img/alura_logo.png" alt="Logo de Alura" class="formacion__imagen"></li>
-                        <li class="formacion__item"><h4 class="formacion__nombre">FrontEnd Developer</h4></li>
+                        <li class="formacion__item"><h4 class="formacion__nombre">Curso de FrontEnd Developer</h4></li>
                         <li class="formacion__item"><p class="formacion__info">En curso - Alura Latam</p></li>
                     </ul>
                 </div>
+            </div>
+        </section>
+        <section class="experiencia container">
+            <h2 class="experiencia__titulo">Experiencia profesional</h2>
+            <div class="experiencia__seccion--derecha">
+                <img src="img/agenda.png" alt="Foto del proyecto" class="experiencia__imagen">
+                <div class="experiencia__informacion">
+                    <h4 class="experiencia__nombre">Agenda</h4>
+                    <p class="experiencia__descripcion">Exámen práctico de la Universidad de Colima</p>
+                    <div class="experiencia__botones">
+                        <button class="experiencia__repositorio">Repositorio</button>
+                        <button class="experiencia__demo">Ver demo</button>
+                    </div>
+                </div>
+            </div>
+            <div class="experiencia__seccion--izquierda">
+                <img src="img/huddle.png" alt="Foto del proyecto" class="experiencia__imagen">
+                <div class="experiencia__informacion">
+                    <h4 class="experiencia__nombre">Página web básica (no responsiva)</h4>
+                    <p class="experiencia__descripcion">Challenge de FrontEnd Mentor</p>
+                    <div class="experiencia__botones">
+                        <button class="experiencia__repositorio">Repositorio</button>
+                        <button class="experiencia__demo">Ver demo</button>
+                    </div>
             </div>
         </section>
     </main>
