Creación de responsividad para tablet

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="header__enlace"><a href="">Hobbies</a></li>
                 <li class="header__enlace"><a href="">Formación</a></li>
                 <li class="header__enlace"><a href="">Proyectos</a></li>
-                <li class="header__enlace header__enlace--correo"><a href="mailto:verduzcogonzalezangelmanuel3@gmail.com">verduzcogonzalezangelmanuel3@gmail.com</a></li>
+                <li class="header__enlace--correo"><a href="mailto:verduzcogonzalezangelmanuel3@gmail.com">verduzcogonzalezangelmanuel3@gmail.com</a></li>
             </ul>
         </nav>
     </header>
@@ -98,14 +98,14 @@
             <div class="formacion__caja">
                 <div class="formacion__seccion">
                     <ul class="formacion__lista">
-                        <li class="formacion__item--logo"><img src="img/udec_logo.png" alt="Logo de la Universidad de Colima" class="formacion__imagen"></li>
+                        <li class="formacion__item--logo-udec"></li>
                         <li class="formacion__item"><h4 class="formacion__nombre">Ingeniería en Software</h4></li>
                         <li class="formacion__item"><p class="formacion__info">En curso - Universidad de Colima</p></li>
                     </ul>
                 </div>
                 <div class="formacion__seccion">
                     <ul class="formacion__lista">
-                        <li class="formacion__item--logo"><img src="img/alura_logo.png" alt="Logo de Alura" class="formacion__imagen"></li>
+                        <li class="formacion__item--logo-alura"></li>
                         <li class="formacion__item"><h4 class="formacion__nombre">Curso de FrontEnd Developer</h4></li>
                         <li class="formacion__item"><p class="formacion__info">En curso - Alura Latam</p></li>
                     </ul>
@@ -153,7 +153,7 @@
         </section>
     </main>
     <footer class="footer container">
-        <p class="footer__texto">Creado por Angel Manuel Verduzco González <br> 2022</p>
+        <p class="footer__texto">Creado por Angel Manuel Verduzco González <br> 2023</p>
     </footer>
 </body>
 </html>
