--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <h2 class="header__name">Angel Verduzco</h2>
         <nav class="header__navegacion">
             <ul class="header__lista">
-                <li class="header__enlace"><a href="">Sobre mí</a></li>
-                <li class="header__enlace"><a href="">Skills</a></li>
-                <li class="header__enlace"><a href="">Hobbies</a></li>
-                <li class="header__enlace"><a href="">Formación</a></li>
-                <li class="header__enlace"><a href="">Proyectos</a></li>
+                <li class="header__enlace"><a href="#sobreMi">Sobre mí</a></li>
+                <li class="header__enlace"><a href="#skills">Skills</a></li>
+                <li class="header__enlace"><a href="#hobbies">Hobbies</a></li>
+                <li class="header__enlace"><a href="#formacion">Formación</a></li>
+                <li class="header__enlace"><a href="#proyectos">Proyectos</a></li>
                 <li class="header__enlace--correo"><a href="mailto:verduzcogonzalezangelmanuel3@gmail.com">verduzcogonzalezangelmanuel3@gmail.com</a></li>
             </ul>
         </nav>
@@ -46,7 +46,7 @@
             </div>
             <img class="presentacion__imagen" src="img/selfie.jpeg" alt="Foto de Angel"></img>
         </section>
-        <section class="sobreMi container">
+        <section class="sobreMi container" id="sobreMi">
             <h2 class="sobreMi__titulo">Sobre mí</h2>
             <p class="sobreMi__descripcion">Me llamo Angel Manuel Verduzco González, nací en Colima, México. Actualmente tengo 18 años de edad y estoy estudiando la carrera de ingeniería en software en la Facultad de Telemática de la Universidad de Colima.
             <br>
@@ -55,7 +55,7 @@
             </p>
             <img src="img/firma.png" alt="Firma" class="sobreMi__firma">
         </section>
-        <section class="skills container">
+        <section class="skills container" id="skills">
             <h2 class="skills__titulo">Skills</h2>
             <ul class="skills__lista">
                 <li class="skills__item">
@@ -72,7 +72,7 @@
                 </li>
             </ul>
         </section>
-        <section class="hobbies container">
+        <section class="hobbies container" id="hobbies">
             <h2 class="hobbies__titulo">Hobbies</h2>
             <ul class="hobbies__lista">
                 <li class="hobbies__item">
@@ -93,7 +93,7 @@
                 </li>
             </ul>
         </section>
-        <section class="formacion container">
+        <section class="formacion container" id="formacion">
             <h2 class="formacion__titulo">Formación académica</h2>
             <div class="formacion__caja">
                 <div class="formacion__seccion">
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </section>
-        <section class="experiencia container">
+        <section class="experiencia container" id="proyectos">
             <h2 class="experiencia__titulo">Experiencia profesional</h2>
             <div class="experiencia__seccion--derecha">
                 <img src="img/agenda.png" alt="Foto del proyecto" class="experiencia__imagen">
@@ -121,7 +121,7 @@
                     <p class="experiencia__descripcion">Exámen práctico de la Universidad de Colima</p>
                     <div class="experiencia__botones">
                         <button class="experiencia__repositorio" onclick="window.location.href='https://github.com/AngelManuelVerduzcoGonzalez/Challenge1-OracleOne';" >Repositorio</button>
-                        <button class="experiencia__demo">Ver demo</button>
+                        <button class="experiencia__demo" onclick="window.location.href='https://angelmanuelverduzcogonzalez.github.io/Agenda-proyecto/agenda.html'">Ver demo</button>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <p class="experiencia__descripcion">Challenge de FrontEnd Mentor</p>
                     <div class="experiencia__botones">
                         <button class="experiencia__repositorio" onclick="window.location.href='https://github.com/AngelManuelVerduzcoGonzalez/Challenge1'">Repositorio</button>
-                        <button class="experiencia__demo">Ver demo</button>
+                        <button class="experiencia__demo" onclick="window.location.href='https://angelmanuelverduzcogonzalez.github.io/Challenge1/'">Ver demo</button>
                     </div>
             </div>
         </section>
